fixed whitespace after images in html (at end of page)
attempt to fix dissappearing menu items after search

attempt to fix broken top nav button

--- a/source/_themes/sphinx_rtd_theme/static/css/custom.css
+++ b/source/_themes/sphinx_rtd_theme/static/css/custom.css
@@ -23,6 +23,10 @@
 	font-size: 150%;
 }
 
+li.toctree-l1 > a {
+	display: block !important;
+}
+
 
 .wy-menu-vertical li.current > a {
 	background-color: #e3e3e3;
